Updated documentation regarding project overview and usage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,23 @@
+# ---- Postgres DB Connection Properties ----
+
+# Using the "postgres" database on localhost
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=${POSTGRES_USERNAME}
 spring.datasource.password=${POSTGRES_PASSWORD}
 
-# Flyway Properties for Default Users
+# ---- Flyway Properties for Default Users ----
+# Initial admin and reader accounts will be created using the following properties.
+# The following credentials should never be changed or else the flyway migration checksums validation will fail.
+# To update or remove these accounts add a flyway migration script.
+
 spring.flyway.placeholders.adminUsername=${FLYWAY_ADMIN_USERNAME}
 spring.flyway.placeholders.adminEncodedPassword=${FLYWAY_ADMIN_PASSWORD}
 
+# The user account with username "reader" and password "reader" (db stores it encrypted) is shown below.
 spring.flyway.placeholders.userUsername=reader
 spring.flyway.placeholders.userEncodedPassword=$2a$10$zuQLVMhzJv.nDNFXki7dbu9RBEItl3MbuK3NzHxIcVmgC4fDnFwTq
 
+# Admin has both ROLE_ADMIN and ROLE_USER roles while a user only has ROLE_USER role.
+# See db/migration/V2__addDefaultUsers.sql for more information.
 spring.flyway.placeholders.adminRole=ROLE_ADMIN
 spring.flyway.placeholders.userRole=ROLE_USER
